# grep-python

./: .bumpversion.toml  .gitignore  CHANGELOG.md  README.md  app.py  pygrep.sh  pyproject.toml  requirements.txt
.github/workflow/: ci.yml
.github/workflows/: ci.yml  release.yml
docs/: README.md  api.md  architecture.md  contributing.md  examples.md  pattern_syntax.md  performance.md
src/: __init__.py  cli.py  constants.py  file_search.py  main.py  output_formatters.py  pattern_matcher.py  pattern_parser.py
tests/: test_cli.py  test_constants.py  test_file_search.py  test_init.py  test_main_cli.py  test_output_formatters.py  test_pattern_matcher.py  test_pattern_parser.py
